--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -55,11 +55,6 @@ jobs:
           cache: ${{ steps.detect-package-manager.outputs.manager }}
       - name: Setup Pages
         uses: actions/configure-pages@v4
-        with:
-          # Automatically inject basePath in your Next.js config file, and disable
-          # server side image optimization (WebP) to support deployment to GitHub Pages.
-          # Since we already have output: 'export' and unoptimized: true, this is safe.
-          static_site_generator: next
       - name: Restore cache
         uses: actions/cache@v4
         with:
@@ -71,7 +66,9 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json', '**/yarn.lock') }}-
       - name: Install dependencies
-        run: ${{ steps.detect-package-manager.outputs.manager }} ${{ steps.detect-package-manager.outputs.command }}
+        run: npm ci
+      - name: Cleanup conflicting configs
+        run: rm -f next.config.js
       - name: Build with Next.js
         run: npm run build
       - name: List files (Debug)
